--- a/main.tex
+++ b/main.tex
@@ -69,9 +69,9 @@
 
 % TODO
 % dane autora
-\newcommand{\FirstNameAuthor}{Imię}
-\newcommand{\SurnameAuthor}{Nazwisko}
-\newcommand{\IdAuthor}{$\langle$wpisać właściwy$\rangle$}   % numer albumu  (bez $\langle$ i $\rangle$)
+\newcommand{\FirstNameAuthor}{Mateusz}
+\newcommand{\SurnameAuthor}{Marczewski}
+\newcommand{\IdAuthor}{282700}   % numer albumu  (bez $\langle$ i $\rangle$)
 
 % drugi autor:
 %\newcommand{\FirstNameCoauthor}{Imię}   % Jeżeli jest drugi autor, to tutaj należy podać imię.
@@ -83,15 +83,15 @@
 \newcommand{\IdCoauthor}{}  % Jeżeli praca ma tylko jednego autora, to dane drugiego autora zostają puste.
 %%%%%%%%%%
 
-\newcommand{\Supervisor}{$\langle$tytuł lub stopień naukowy oraz imię i nazwisko$\rangle$}     % dane promotora (bez $\langle$ i $\rangle$)
-\newcommand{\Title}{Tytuł pracy dyplomowej magisterskiej}           % tytuł pracy po polsku
+\newcommand{\Supervisor}{Dr hab. inż. Arkadiusz Biernacki}     % dane promotora (bez $\langle$ i $\rangle$)
+\newcommand{\Title}{Moduł do obsługi importów danych finansowych z plików PDF}           % tytuł pracy po polsku
 \newcommand{\TitleAlt}{Thesis title in English}                     % thesis title in English
-\newcommand{\Program}{$\langle$wpisać właściwy$\rangle$}            % kierunek studiów  (bez $\langle$ i $\rangle$)
-\newcommand{\Specialisation}{$\langle$wpisać właściwą$\rangle$}     % specjalność  (bez $\langle$ i $\rangle$)
-\newcommand{\Departament}{$\langle$wpisać właściwą$\rangle$}        % katedra promotora  (bez $\langle$ i $\rangle$)
+\newcommand{\Program}{Informatyka}            % kierunek studiów  (bez $\langle$ i $\rangle$)
+\newcommand{\Specialisation}{ITS}     % specjalność  (bez $\langle$ i $\rangle$)
+\newcommand{\Departament}{Katedra Sieci i Systemów Komputerowych}        % katedra promotora  (bez $\langle$ i $\rangle$)
 
 % Jeżeli został wyznaczony promotor pomocniczy lub opiekun, proszę go/ją wpisać ...
-\newcommand{\Consultant}{$\langle$stopień naukowy imię i nazwisko$\rangle$} % dane promotora pomocniczego, opiekuna (bez $\langle$ i $\rangle$)
+\newcommand{\Consultant}{} % dane promotora pomocniczego, opiekuna (bez $\langle$ i $\rangle$)
 % ... w przeciwnym razie proszę zostawić puste miejsce jak poniżej:
 %\newcommand{\Consultant}{} % brak promotowa pomocniczego / opiekuna
 
