--- a/main.tex
+++ b/main.tex
@@ -85,9 +85,9 @@
 
 \newcommand{\Supervisor}{Dr hab. inż. Arkadiusz Biernacki}     % dane promotora (bez $\langle$ i $\rangle$)
 \newcommand{\Title}{Moduł do obsługi importów danych finansowych z plików PDF}           % tytuł pracy po polsku
-\newcommand{\TitleAlt}{Thesis title in English}                     % thesis title in English
+\newcommand{\TitleAlt}{Module for importing inventory data from PDF files}                     % thesis title in English
 \newcommand{\Program}{Informatyka}            % kierunek studiów  (bez $\langle$ i $\rangle$)
-\newcommand{\Specialisation}{ITS}     % specjalność  (bez $\langle$ i $\rangle$)
+\newcommand{\Specialisation}{internet i technologie sieciowe}     % specjalność  (bez $\langle$ i $\rangle$)
 \newcommand{\Departament}{Katedra Sieci i Systemów Komputerowych}        % katedra promotora  (bez $\langle$ i $\rangle$)
 
 % Jeżeli został wyznaczony promotor pomocniczy lub opiekun, proszę go/ją wpisać ...
